# Backup_MKT

./: .gitignore  README.md  app_registry.py  logic_button1.py  logic_button2.py  logic_button3.py  logic_button4.py  logic_button5.py  main.py  main.qss  main_funktions.py  names.json  pyproject.toml  requirements.txt  translation_manager.py  ui_button1.py  ui_button2.py  ui_button3.py  ui_button4.py  ui_button5.py  ui_settings.py
config_tool/: config_tool.qss  logic_config_tool.py  ui_config_tool.py
einstellung/: einstellung.qss  logic_einstellung.py  ui_einstellung.py
extensions/einstellung/: __init__.py  einstellung.qss  logic_einstellung.py  ui_einstellung.py
lang/: de.py  en.py
networkscanner/: logic_netzwerkscanner.py  netzwerkscanner.qss  ui_netzwerkscanner.py
netzwerkscanner/: logic_netzwerkscanner.py  netzwerkscanner.qss  ui_netzwerkscanner.py
src/my_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/package_one/: main.py  main.qss  main_funktions.py  names.json
src/package_one/Data/: last_Modbus_Template.json  names.json
src/package_one/extensions/: __init__.py
src/package_one/extensions/einstellung/: __init__.py  logic_einstellung.py  ui_einstellung.py
src/package_one/extensions/modbus_template_konfigurator/: __init__.py  last_Modbus_Template.json  logic_modbus_template.py  ui_modbus_template.py
src/package_one/extensions/search_utility/: __init__.py  logic_search.py  ui_search.py
src/package_one/mc_ui/: mc_styleguide.qss  mc_ui_elements.py
(+3 files in other folders)
